# stellar-zk-rwa

./: Cargo.toml  Makefile  README.md  crash.md  flow.md
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs  test.rs
contracts/zk_verifier/test_snapshots/: measure_gateway_gas.1.json
contracts/zk_verifier/tests/: gas_calibration.rs
sp1-prover/script/: Cargo.toml
sp1-prover/script/src/: main.rs
