[package]
name = "zk_verifier"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.4.0"
wee_alloc = "0.4.5"

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.5"
